# flakehunter

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
demo/: GROUND_TRUTH.json  suite_ids.txt
demo/src/shopcart/: __init__.py  cart.py  catalog.py
demo/tests/: test_async_worker.py  test_broken_feature.py  test_cart_discounts.py  test_catalog.py  test_deck.py  test_pricing_rounding.py  test_stable_total.py
docs/: ARCHITECTURE.md  DEMO_CASES.md  SPEC.md  STATS_SPEC.md
src/flakehunter/: __init__.py  classifier.py  cli.py  contracts.py  detector.py  fixer.py  orchestrator.py  runner.py  stats.py  tui.py  verifier.py
src/flakehunter/tests/: _builders.py  test_classifier.py  test_cli.py  test_detector.py  test_fixer.py  test_orchestrator.py  test_runner.py  test_stats.py  test_tui.py  test_verifier.py
